--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
     background: url('bg3.jpg');
     background-size: cover;
     background-position: center;
-    
+
 
 }
 
@@ -28,7 +28,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center ;
-    z-index: 99;   
+    z-index: 99;
 }
 
 .logo {
@@ -186,7 +186,7 @@ header {
 
 .input-box input:focus~label,
 .input-box input:valid~label {
-    top: -5px;    
+    top: -5px;
 }
 
 .input-box input {
@@ -210,7 +210,7 @@ header {
 }
 .input-box input:focus~label,
 .input-box input:valid~label {
-    top: -5px;    
+    top: -5px;
 }
 .remember-forgot{
     font-size: .9em;
@@ -269,8 +269,8 @@ header {
 
 
 @media screen and (max-width:768px) {
-   
-    
+
+
    header{
     width: 90%;
     padding: 20px;
@@ -292,7 +292,7 @@ header {
         width: 90%;
         font-size: 15px;
         font-weight: 200;
-        
+
     }
 
     .navigation a{
@@ -309,16 +309,21 @@ header {
         right: 0;
         padding: 5;
         border: none;
-        
+
         border-radius: 0;
     }
-   
+
     .wrapper{
-        width: 90%;
+        width: 300px;
+        height: 340px;
+    }
+    
+    .wrapper.active{
+        height: 420px;
     }
 }
 @media screen and (max-width:640px) {
-    
+
     .logo span{
         font-size: 10px;
         font-weight: 300;
@@ -332,8 +337,8 @@ header {
     .navigation a{
         font-size: 10px;
         font-weight: 200;
-        
-       
+
+
     }
 
     .navigation .btnLogin-popup{
@@ -344,8 +349,7 @@ header {
         padding: 15;
         border: 1px solid;
         border-radius: 0;
-        
+
     }
-   
+
 }
-    
